lab1/Test/L1-A-12-49.output
Error Type B at Line 5
Error Type A at Line 12
